--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-https://github.com/Mahesh0253/pyrogram/archive/inline.zip
-tgcrypto==1.2.2
+git+https://github.com/subinps/pyrogram@inline-m
 pymongo[srv]==3.11.4
 motor==2.4.0
 marshmallow==3.12.2
